<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <ImageView
        android:layout_width="287dp"
        android:layout_height="227dp"
        android:src="@drawable/page2"
        android:layout_marginTop="51dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:id="@+id/image_page2"
        android:typeface="normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1_page2"
        android:id="@+id/text1_page2"
        android:layout_below="@+id/image_page2"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:typeface="normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2_page2"
        android:layout_below="@+id/text1_page2"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button_page2"
        android:text="@string/button_page1"
        android:textSize="20sp"
        android:background="@color/light_blue"
        android:layout_marginTop="532dp"
        android:typeface="normal"
        />
</RelativeLayout>