<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:layout_width="288dp"
        android:layout_height="228dp"
        android:src="@drawable/page3"
        android:id="@+id/picture_page3"
        android:layout_marginTop="52dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1_page3"
        android:layout_below="@+id/picture_page3"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/text1_page3"
        android:layout_marginTop="10dp"
        android:typeface="normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1_page3"
        android:text="@string/text2_page3"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:typeface="normal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button_page3"
        android:text="@string/button_page3"
        android:textSize="20sp"
        android:background="@color/light_blue"
        android:layout_marginTop="532dp"
        android:typeface="normal"
        />

</RelativeLayout>