<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >
    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/page1"
        android:id="@+id/picture_page1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1_page1"
        android:layout_below="@+id/picture_page1"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/text1_page1"
        android:typeface="normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1_page1"
        android:text="@string/text2_page1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:id="@+id/text2_page1"
        android:typeface="normal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button_page1"
        android:text="@string/button_page1"
        android:textSize="20sp"
        android:background="@color/light_blue"
        android:layout_marginTop="532dp"
        android:typeface="normal"
        />


</RelativeLayout>